bridge/base/web-deployment.yaml
#! web-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: web
    namespace: orbitaltech2
    labels:
        com.docker.compose.project: orbitaltech2
        com.docker.compose.service: web
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: orbitaltech2
            com.docker.compose.service: web
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: orbitaltech2
                com.docker.compose.service: web
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: web
                  image: orbitaltech2-web
                  imagePullPolicy: IfNotPresent
                  args:
                    - python
                    - run.py
                  ports:
                    - name: web-5000
                      containerPort: 5000
                  volumeMounts:
                    - name: app-static
                      mountPath: /app/static
                    - name: app-logs
                      mountPath: /app/logs
                    - name: app-browser-data
                      mountPath: /app/browser_data
                    - name: app-instance
                      mountPath: /app/instance
            volumes:
                - name: app-static
                  hostPath:
                    path: /Volumes/HRD2T/ORBITAL TECH 2/static
                - name: app-logs
                  hostPath:
                    path: /Volumes/HRD2T/ORBITAL TECH 2/logs
                - name: app-browser-data
                  hostPath:
                    path: /Volumes/HRD2T/ORBITAL TECH 2/browser_data
                - name: app-instance
                  hostPath:
                    path: /Volumes/HRD2T/ORBITAL TECH 2/instance
